sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: Boolean does not take parameters
	while (!trie()){
                    ^